Simplify the export logic 2.0 (#13)